Tabs - fix item width on mobile

--- a/html/src/assets/css/app.scss
+++ b/html/src/assets/css/app.scss
@@ -1005,6 +1005,7 @@ h6 {
 
 .tab-list li {
   list-style-type: none;
+  white-space: nowrap;
 }
 
 .tab-list a {
